--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install requirements to run Test
         run : |
-          pip install pytest
+          pip install selenium pytest chromedriver-autoinstaller PyVirtualDisplay
 
       - name: Testing
         run: |
